--- a/inventory.ini
+++ b/inventory.ini
@@ -1,11 +1,11 @@
 [db]
-db.daws78s.online
+anuprasad.online
 
 [backend]
-backend.daws78s.online
+backend.anuprasd.online
 
 [frontend]
-frontend.daws78s.online
+frontend.anuprasad.online
 
 [all:vars]
 ansible_user=ec2-user
