--- a/roles/backend/vars/main.yaml
+++ b/roles/backend/vars/main.yaml
@@ -1,6 +1,6 @@
 login_user: root
-login_host: db.daws78s.online
-login_password: ExpenseApp@1
+login_host: anuprasad.online
+login_password: prasad123
 DB_HOST: db.daws78s.online
 app_location: /app
 component: backend
