--- a/roles/backend/vars/main.yaml
+++ b/roles/backend/vars/main.yaml
@@ -1,6 +1,6 @@
 login_user: root
-login_host: anuprasad.online
+login_host: db.anuprasad.online
 login_password: prasad123
-DB_HOST: db.daws78s.online
+DB_HOST: db.anuprasad.online
 app_location: /app
 component: backend
